[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-monitor"
version = "0.1.0"
description = "轻量级 CLI 工具，批量检测多个平台的 API Key 是否可用"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.scripts]
api-monitor = "api_monitor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/api_monitor"]

[tool.hatch.build.targets.sdist]
include = ["src/api_monitor"]
